--- a/EventsApp/Base.lproj/Main.storyboard
+++ b/EventsApp/Base.lproj/Main.storyboard
@@ -102,5 +102,35 @@
             </objects>
             <point key="canvasLocation" x="1589.8550724637682" y="138.61607142857142"/>
         </scene>
+        <!--Edit Event View Controller-->
+        <scene sceneID="M6B-6e-acX">
+            <objects>
+                <viewController storyboardIdentifier="EditEventViewController" id="Xw4-Vm-ghw" customClass="EditEventViewController" customModule="EventsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pcy-GD-LI3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VVm-O9-5HZ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="QJu-IR-RJR" firstAttribute="trailing" secondItem="VVm-O9-5HZ" secondAttribute="trailing" id="0YA-hQ-nDI"/>
+                            <constraint firstItem="VVm-O9-5HZ" firstAttribute="leading" secondItem="QJu-IR-RJR" secondAttribute="leading" id="CCn-2o-jrJ"/>
+                            <constraint firstItem="VVm-O9-5HZ" firstAttribute="top" secondItem="QJu-IR-RJR" secondAttribute="top" id="CkO-a8-JaJ"/>
+                            <constraint firstItem="QJu-IR-RJR" firstAttribute="bottom" secondItem="VVm-O9-5HZ" secondAttribute="bottom" id="vVZ-hg-O50"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QJu-IR-RJR"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="VVm-O9-5HZ" id="WFP-wu-8sD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eAe-pn-5BU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2303" y="139"/>
+        </scene>
     </scenes>
 </document>
